Updated libraries and java to 17